# F-Project

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: unit.yml
include/flang/: ast_visitor.hpp  flang_exception.hpp  pp.hpp  token.hpp  token_type.hpp  tokenizer.hpp
include/flang/eval/: builtins.hpp  environment_stack.h  environment_stack.hpp  eval.hpp  eval_visitor.hpp  value.hpp
include/flang/parse/: ast.hpp  parser.hpp
include/flang/pp/: ast_printer.hpp  print_ast.hpp  print_token.hpp
include/flang/tokenize/: token.hpp  (+2 more)
src/: CMakeLists.txt  main.cpp
src/flang/: token.cpp  tokenizer.cpp
src/flang/eval/: builtins.cpp  builtins.hpp  environment_stack.cpp  environment_stack.h  eval.cpp  eval_visitor.cpp  eval_visitor.hpp
src/flang/parse/: ast.cpp  parser.cpp  parser_impl.cpp  parser_impl.hpp
src/flang/pp/: ast_printer.cpp  print_ast.cpp  print_ast_impl.hpp  print_token.cpp
src/flang/tokenize/: token.cpp  tokenizer.cpp
tests/: CMakeLists.txt  main.cpp  run_tests.sh  test_exec.py  test_helloworld.cpp  test_tokenizer.cpp
tests/data/: 000_simple_assert.flang  001_simple_arithmetic.flang  002_simple_variables.flang  003_simple_cond.flang  004_while_cond_invariant.flang  004_while_simple.flang  005_func_simple.flang  005_while_inductive_invariant.flang  006_lambda_simple.flang  006_while_evaluation_order.flang  007_func_simple.flang  007_prog_simple.flang  008_lambda_simple.flang  008_map.flang  009_gcd.flang  009_higher_order_func.flang  010_fibonacci.flang  010_max_element.flang  011_gcd.flang  012_compare_lists.flang  012_fibonacci.flang  013_factorial.flang  013_length.flang  014_compare_lists.flang  014_max_element.flang  015_append.flang  015_concat.flang  016_length.flang  016_reverse.flang  017_filter.flang  017_reverse.flang  factorial.xyz  fibonacci.xyz  gcd.xyz  maxElement.xyz
(+9 files in other folders)
